--- a/linkedinsample/homepage.html
+++ b/linkedinsample/homepage.html
@@ -16,8 +16,7 @@
 
        function likeFunction(elem2)
         {
-        	alert(elem2.src);
-          if (elem2.src == "file:///C:/Users/Mahe/Desktop/Web%20Dev/linkedin%20homepage/like.png") 
+          if (elem2.src == "https://swarasingh99.github.io/linkedin/linkedinsample/like.png") 
           {
           	elem2.src = "like_blue.png";
           }
