--- a/linkedinsample/homepage.html
+++ b/linkedinsample/homepage.html
@@ -152,7 +152,9 @@
 			<div class="reactions">6 * 8 comments</div>
 			
 			<div class="reactions2">
-				<img src="like.png" id="like" onclick="likeFunction(this)"/> Like
+				<button class="like"> 
+					<img src="like.png" id="like"  onclick="likeFunction(this)"/> Like
+				</button>
 				 <!--<button class="like"><img src="like.png" id="like"> Like</button> -->
 				  <button class="comment"><img src="comment.png" id="comment"> Comment</button>
 				  <button class="share"><img src="share.png" id="share"> Share</button>
